karavan-demo/deprecated/openshift/apps/gitea/gitea-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  ports:
  - name: 2222-tcp
    port: 2222
  - name: 3000-tcp
    port: 3000
  selector:
    app: gitea
    deploymentconfig: gitea
