karavan-demo/deprecated/openshift/apps/gitea/gitea-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitea
spec:
  port:
    targetPort: 3000-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gitea
    weight: 100
  wildcardPolicy: None
